--- a/assets/app.css
+++ b/assets/app.css
@@ -570,11 +570,11 @@ video {
 .-top-4 {
   top: -1rem;
 }
-.-top-20 {
-  top: -5rem;
-}
 .-top-40 {
   top: -10rem;
+}
+.-top-20 {
+  top: -5rem;
 }
 .z-10 {
   z-index: 10;
@@ -662,6 +662,9 @@ video {
 .mt-3 {
   margin-top: 0.75rem;
 }
+.-mb-14 {
+  margin-bottom: -3.5rem;
+}
 .mb-3 {
   margin-bottom: 0.75rem;
 }
@@ -671,14 +674,14 @@ video {
 .ml-6 {
   margin-left: 1.5rem;
 }
-.mb-4 {
-  margin-bottom: 1rem;
-}
 .ml-4 {
   margin-left: 1rem;
 }
 .mt-14 {
   margin-top: 3.5rem;
+}
+.mb-4 {
+  margin-bottom: 1rem;
 }
 .mt-60 {
   margin-top: 15rem;
@@ -745,12 +748,12 @@ video {
 .basis-1\/3 {
   flex-basis: 33.333333%;
 }
-.skew-y-15 {
-  --tw-skew-y: 15deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .-skew-y-15 {
   --tw-skew-y: -15deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.skew-y-15 {
+  --tw-skew-y: 15deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .transform {
